small fixes to component design doc

--- a/Doc/Low Level/rev0/Design.tex
+++ b/Doc/Low Level/rev0/Design.tex
@@ -50,6 +50,10 @@
 			\emph{Professor:} \\
 			Dr. Alan Wassyng \\[0.4cm]
 			\emph{Teaching Assistants:} \\
+			Nicholas Annable \\
+			Joshua Barkovic \\
+			Spencer Deevy \\
+			Viktor Smirnov
 		\end{flushright}
 	\end{minipage}\\[2cm]
 
@@ -465,7 +469,7 @@ NF13            &     &    &    &     &    &    &     &     &      \\ \hline
 \newpage
 \section{Appendix}
 \subsection{Class Diagram}
-The Class Diagram gives an overview of the layout of the server code.
+The Class Diagram gives an overview of the layout of the system.
 \begin{sidewaysfigure}[ht]
    \centering
    \includegraphics[width=\textwidth]{diagram/class_diagram_final2.png} % requires the graphicx package
